# mammoth-setup

./: Cargo.toml  LICENSE  README.md  prototype.toml
mammoth-macro/: Cargo.toml  README.md
mammoth-macro/src/: lib.rs
mammoth-macro/tests/: mammoth_module.rs
mod-test/: Cargo.toml
mod-test/src/: lib.rs
src/: config.rs  diagnostics.rs  error.rs  id.rs  lib.rs  loaded.rs  log.rs  validation.rs  version.rs
src/config/: host.rs  mammoth.rs  module.rs  port.rs
src/config/mammoth/: log_severity.rs
src/error/: event.rs  severity.rs  validate.rs
src/loaded/: library.rs
tests/: test_cert.pem  test_config.toml  test_config_bad_mod.toml  test_key.pem
tests/www/: index.html
