[package]
name = "mammoth-setup"
version = "0.0.0"
authors = ["Gianluca (mclytar)"]
edition = "2018"

description = "Mammoth web-server backend crate."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mclytar/mammoth-setup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "mammoth-macro"
]

[features]
mammoth_module = ["mammoth-macro"]

[dependencies]
chrono = "~0.4"
failure = "~0.1"
lazy_static = "~1.3"
libloading = "~0.5"
mammoth-macro = { version = "0.0.1", optional = true, path = "mammoth-macro" }
openssl = "~0.10"
regex = "~1.1"
semver = "~0.9"
serde = "~1.0"
serde_derive = "~1.0"
toml = "~0.5"