[package]
name = "mod-test"
version = "0.0.1"
authors = ["Gianluca <gianluca.brian@hotmail.it>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
mammoth-setup = { version = "0.0.0", path = "../", features = ["mammoth_module"] }
semver = "0.9.0"
toml = "0.5.1"